cmake_minimum_required(VERSION 3.13)

project(git-starter-cpp)
set(CMAKE_CXX_STANDARD 23) # Enable the C++23 standard
set(CMAKE_CXX_STANDARD_REQUIRED ON)

file(GLOB_RECURSE SOURCE_FILES src/*.cpp src/*.hpp)

add_executable(git-starter-cpp ${SOURCE_FILES})

# Find OpenSSL
find_package(OpenSSL REQUIRED)

# # Add your source files
# add_executable(git-starter-cpp server.cpp)

# Link OpenSSL to your program
target_link_libraries(git-starter-cpp OpenSSL::SSL OpenSSL::Crypto)


target_link_libraries(git-starter-cpp PRIVATE z)

